tests/elab_fail/forward_type_reference_unresolved.lean.out.expected
forward_type_reference_unresolved.lean:4:21-4:57: error: unresolved `forward_type_reference%`: 'NeverDefined' is never defined
